// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order - index Should match snapshot loading and display correctly for Mincron 1`] = `
<div>
  <div
    class="MuiBox-root css-1tl0rlc"
    data-testid="loader-component"
  >
    <div
      class="MuiBox-root css-hyxlzm"
    >
      <span
        aria-valuenow="100"
        class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
        role="progressbar"
        style="width: 80px; height: 80px; transform: rotate(-90deg);"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="19.5"
            stroke-width="5"
            style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
          />
        </svg>
      </span>
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 80px; height: 80px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="19.5"
            stroke-width="5"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1kbjjd5-MuiContainer-root"
  >
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1yp6lty-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-n1sla7-MuiBreadcrumbs-separator"
        >
          <svg>
            chevron-right.svg
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/orders"
          >
            Orders
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-n1sla7-MuiBreadcrumbs-separator"
        >
          <svg>
            chevron-right.svg
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-ohe2uh-MuiTypography-root"
            data-testid="s-123456-001-breadcrumb"
          >
            S123456.001
          </span>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 printGridBlock css-8dqj1m-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 printGridWidth_33_inline css-f1vcn2-MuiGrid-root"
      >
        <h1
          class="MuiTypography-root MuiTypography-h5 css-16xaac9-MuiTypography-root"
        >
          Order #
          :
           
          <span
            class="MuiBox-root css-pelz90"
            data-testid="order-number"
          >
            S123456.001
          </span>
        </h1>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true printGridWidth_66_inline css-b4v11c-MuiGrid-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h5 css-16xaac9-MuiTypography-root"
        >
          Status
          : 
          <span
            class="MuiBox-root css-1t8i1vx"
            data-testid="order-status"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-4pid65-MuiSkeleton-root"
              style="width: 120px; height: 24px;"
            />
          </span>
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 printGridBlock css-1v2s70i-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 printGridWidth_33_inline css-f1vcn2-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1694iiy-MuiPaper-root-MuiCard-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-chi3mz-MuiTypography-root"
            data-testid="order-info-header"
          >
            Order Information
          </h5>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Job Name
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Order Date
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Ordered By
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                PO #
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8 printGridWidth_66_inline css-1st314e-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1694iiy-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-1yzd79m-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-hshm0p"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Delivery Summary
                </h5>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Shipped To
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                    />
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Ship Date
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                    />
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Delivery Method
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                    />
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-1yzd79m-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-hshm0p"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Special Pickup or Handling Instructions
                </h5>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-testid="handling-instructions"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                />
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                  style="width: 120px;"
                />
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 printGridBlock css-1tw2i9j-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8.5 printGridWidth_100 css-11jw4ks-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1dd7zhh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiBox-root css-1y5sho6"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item printGridWidth_15 css-13i4rnv-MuiGrid-root"
                >
                  <div
                    class="printGridWidth_90 MuiBox-root css-1l8jtn9"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Product
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-md-3 printGridWidth_25 css-1hxednu-MuiGrid-root"
                />
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true printGridWidth_60 printGridBlock css-70o5km-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Price
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Order Quantity
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Ship Quantity
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Order Total
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
                  />
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-gajhq5"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1eoohxj-MuiGrid-root"
                data-testid="row_undefined"
              >
                <div
                  class="MuiGrid-root MuiGrid-item css-1y0l3kn-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-13eans4"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 80px; height: 80px;"
                    />
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-3 css-155f3yv-MuiGrid-root"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 css-g1pjat-MuiTypography-root"
                    data-testid="mfr-name"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 80px;"
                    />
                  </h6>
                  <div
                    class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                    />
                  </div>
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 120px;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true css-3cv60e-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
                      data-testid="order-price"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 50px;"
                      />
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
                      data-testid="order-quantity"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 30px;"
                      />
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-1u1fap8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 css-ep081p-MuiTypography-root"
                      data-testid="order-ship-quantity"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 30px;"
                      />
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-md-true css-pvj6rd-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 css-18hk6mc-MuiTypography-root"
                      data-testid="order-price-total"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 50px;"
                      />
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-auvnaa-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="height: 24px;"
                    />
                    <div
                      class="MuiBox-root css-1ypvdwm"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px; height: 24px;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3.5 printGridWidth_50 printBreakPage css-1wcy7d3-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-26ymy3-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiBox-root css-ju4zfe"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
              >
                Order Summary
              </h5>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-3zd3l8-MuiPaper-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container css-cqjonc-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  >
                    Subtotal
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
                    data-testid="order-summary-subtotal"
                  >
                    <span
                      class="MuiBox-root css-1bvc4cc"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 80px;"
                      />
                    </span>
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
                  >
                    Tax
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
                    data-testid="order-summary-tax"
                  >
                    <span
                      class="MuiBox-root css-1bvc4cc"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 80px;"
                      />
                    </span>
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root css-1ebprri"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1k5xob2-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  >
                    Order Total
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1eszk6v-MuiTypography-root"
                    data-testid="order-summary-order-total"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                      style="width: 80px;"
                    />
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                >
                  <button
                    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
                    data-testid="add-all-to-cart-button"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="MuiBox-root css-48y3p0"
                    >
                      <div
                        class="MuiBox-root css-hyxlzm"
                      >
                        <span
                          aria-valuenow="100"
                          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
                          role="progressbar"
                          style="width: 16px; height: 16px; transform: rotate(-90deg);"
                        >
                          <svg
                            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="19.5"
                              stroke-width="5"
                              style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1yx9kzf-MuiCircularProgress-root"
                          role="progressbar"
                          style="width: 16px; height: 16px;"
                        >
                          <svg
                            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
                            viewBox="22 22 44 44"
                          >
                            <circle
                              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                              cx="44"
                              cy="44"
                              fill="none"
                              r="19.5"
                              stroke-width="5"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                    Add All to Cart
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - index Should match snapshot loading and display correctly for Mincron 2`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1kbjjd5-MuiContainer-root"
  >
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1yp6lty-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-n1sla7-MuiBreadcrumbs-separator"
        >
          <svg>
            chevron-right.svg
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/orders"
          >
            Orders
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-n1sla7-MuiBreadcrumbs-separator"
        >
          <svg>
            chevron-right.svg
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-ohe2uh-MuiTypography-root"
            data-testid="s-123456-001-breadcrumb"
          >
            S123456.001
          </span>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 printGridBlock css-8dqj1m-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 printGridWidth_33_inline css-f1vcn2-MuiGrid-root"
      >
        <h1
          class="MuiTypography-root MuiTypography-h5 css-16xaac9-MuiTypography-root"
        >
          Order #
          :
           
          <span
            class="MuiBox-root css-pelz90"
            data-testid="order-number"
          >
            S123456.001
          </span>
        </h1>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true printGridWidth_66_inline css-b4v11c-MuiGrid-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h5 css-16xaac9-MuiTypography-root"
        >
          Status
          : 
          <span
            class="MuiBox-root css-1t8i1vx"
            data-testid="order-status"
          >
            orders.
          </span>
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 printGridBlock css-1v2s70i-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 printGridWidth_33_inline css-f1vcn2-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1694iiy-MuiPaper-root-MuiCard-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-chi3mz-MuiTypography-root"
            data-testid="order-info-header"
          >
            Order Information
          </h5>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Job Name
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Order Date
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Ordered By
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                PO #
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8 printGridWidth_66_inline css-1st314e-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1694iiy-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-1yzd79m-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-hshm0p"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Delivery Summary
                </h5>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Shipped To
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-shipped-to"
                  >
                    -
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Ship Date
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-ship-date"
                  >
                    -
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Delivery Method
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-delivery-method"
                  >
                    -
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-1yzd79m-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-hshm0p"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Special Pickup or Handling Instructions
                </h5>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-testid="handling-instructions"
              >
                N/A
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 printGridBlock css-1tw2i9j-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8.5 printGridWidth_100 css-11jw4ks-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1dd7zhh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiBox-root css-1y5sho6"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item printGridWidth_15 css-13i4rnv-MuiGrid-root"
                >
                  <div
                    class="printGridWidth_90 MuiBox-root css-1l8jtn9"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Product
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-md-3 printGridWidth_25 css-1hxednu-MuiGrid-root"
                />
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true printGridWidth_60 printGridBlock css-70o5km-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Price
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Order Quantity
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Ship Quantity
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Order Total
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
                  />
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-gajhq5"
            >
              <div
                class="MuiBox-root css-14uch6e"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1jd3u1u-MuiTypography-root"
                >
                  No items were found
                </h4>
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-chh3rr-MuiTypography-root"
                >
                  If this is an error, please 
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-lm34z4-MuiTypography-root-MuiLink-root"
                    to="/support"
                  >
                    Contact Branch
                  </a>
                </h5>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3.5 printGridWidth_50 printBreakPage css-1wcy7d3-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-26ymy3-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiBox-root css-ju4zfe"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
              >
                Order Summary
              </h5>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-3zd3l8-MuiPaper-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container css-cqjonc-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  >
                    Subtotal
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
                    data-testid="order-summary-subtotal"
                  >
                    $0.00
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
                  >
                    Tax
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
                    data-testid="order-summary-tax"
                  >
                    $0.00
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root css-1ebprri"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1k5xob2-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  >
                    Order Total
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1eszk6v-MuiTypography-root"
                    data-testid="order-summary-order-total"
                  >
                    $0.00
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                >
                  <button
                    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
                    data-testid="add-all-to-cart-button"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    Add All to Cart
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - index Should match snapshot when ids are undefined in Eclipse 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1kbjjd5-MuiContainer-root"
  >
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1yp6lty-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-n1sla7-MuiBreadcrumbs-separator"
        >
          <svg>
            chevron-right.svg
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/orders"
          >
            Orders
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-n1sla7-MuiBreadcrumbs-separator"
        >
          <svg>
            chevron-right.svg
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-ohe2uh-MuiTypography-root"
            data-testid="s-123456-001-breadcrumb"
          >
            S123456.001
          </span>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 printGridBlock css-8dqj1m-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 printGridWidth_33_inline css-f1vcn2-MuiGrid-root"
      >
        <h1
          class="MuiTypography-root MuiTypography-h5 css-16xaac9-MuiTypography-root"
        >
          Order #
          :
           
          <span
            class="MuiBox-root css-pelz90"
            data-testid="order-number"
          >
            S123456.001
          </span>
        </h1>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true printGridWidth_66_inline css-b4v11c-MuiGrid-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h5 css-16xaac9-MuiTypography-root"
        >
          Status
          : 
          <span
            class="MuiBox-root css-1t8i1vx"
            data-testid="order-status"
          >
            orders.
          </span>
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 printGridBlock css-1v2s70i-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 printGridWidth_33_inline css-f1vcn2-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1694iiy-MuiPaper-root-MuiCard-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-chi3mz-MuiTypography-root"
            data-testid="order-info-header"
          >
            Order Information
          </h5>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Job Name
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Order Date
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Ordered By
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                PO #
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8 printGridWidth_66_inline css-1st314e-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1694iiy-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-1yzd79m-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-hshm0p"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Delivery Summary
                </h5>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Shipped To
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-shipped-to"
                  >
                    -
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Ship Date
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-ship-date"
                  >
                    -
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Delivery Method
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-delivery-method"
                  >
                    -
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-1yzd79m-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-hshm0p"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Special Pickup or Handling Instructions
                </h5>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-testid="handling-instructions"
              >
                N/A
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 printGridBlock css-1tw2i9j-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8.5 printGridWidth_100 css-11jw4ks-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1dd7zhh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiBox-root css-1y5sho6"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item printGridWidth_15 css-13i4rnv-MuiGrid-root"
                >
                  <div
                    class="printGridWidth_90 MuiBox-root css-1l8jtn9"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Product
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-md-3 printGridWidth_25 css-1hxednu-MuiGrid-root"
                />
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true printGridWidth_60 printGridBlock css-70o5km-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Price
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Order Quantity
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Ship Quantity
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Order Total
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
                  />
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-gajhq5"
            >
              <div
                class="MuiBox-root css-14uch6e"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1jd3u1u-MuiTypography-root"
                >
                  No items were found
                </h4>
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-chh3rr-MuiTypography-root"
                >
                  If this is an error, please 
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-lm34z4-MuiTypography-root-MuiLink-root"
                    to="/support"
                  >
                    Contact Branch
                  </a>
                </h5>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3.5 printGridWidth_50 printBreakPage css-1wcy7d3-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-26ymy3-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiBox-root css-ju4zfe"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
              >
                Order Summary
              </h5>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-3zd3l8-MuiPaper-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container css-cqjonc-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  >
                    Subtotal
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
                    data-testid="order-summary-subtotal"
                  >
                    $0.00
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
                  >
                    Tax
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
                    data-testid="order-summary-tax"
                  >
                    $0.00
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root css-1ebprri"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1k5xob2-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  >
                    Order Total
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1eszk6v-MuiTypography-root"
                    data-testid="order-summary-order-total"
                  >
                    $0.00
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                >
                  <button
                    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
                    data-testid="add-all-to-cart-button"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    Add All to Cart
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - index Should match snapshot when ids are undefined in Mincron 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1kbjjd5-MuiContainer-root"
  >
    <nav
      aria-label="breadcrumb"
      class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-1yp6lty-MuiTypography-root-MuiBreadcrumbs-root"
    >
      <ol
        class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
      >
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-n1sla7-MuiBreadcrumbs-separator"
        >
          <svg>
            chevron-right.svg
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/orders"
          >
            Orders
          </a>
        </li>
        <li
          aria-hidden="true"
          class="MuiBreadcrumbs-separator css-n1sla7-MuiBreadcrumbs-separator"
        >
          <svg>
            chevron-right.svg
          </svg>
        </li>
        <li
          class="MuiBreadcrumbs-li"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-ohe2uh-MuiTypography-root"
            data-testid="s-123456-001-breadcrumb"
          >
            S123456.001
          </span>
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 printGridBlock css-8dqj1m-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 printGridWidth_33_inline css-f1vcn2-MuiGrid-root"
      >
        <h1
          class="MuiTypography-root MuiTypography-h5 css-16xaac9-MuiTypography-root"
        >
          Order #
          :
           
          <span
            class="MuiBox-root css-pelz90"
            data-testid="order-number"
          >
            S123456.001
          </span>
        </h1>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-true printGridWidth_66_inline css-b4v11c-MuiGrid-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h5 css-16xaac9-MuiTypography-root"
        >
          Status
          : 
          <span
            class="MuiBox-root css-1t8i1vx"
            data-testid="order-status"
          >
            orders.
          </span>
        </h2>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 printGridBlock css-1v2s70i-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4 printGridWidth_33_inline css-f1vcn2-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1694iiy-MuiPaper-root-MuiCard-root"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 css-chi3mz-MuiTypography-root"
            data-testid="order-info-header"
          >
            Order Information
          </h5>
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Job Name
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Order Date
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                Ordered By
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 css-1rqx6ho-MuiGrid-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
              >
                PO #
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 css-15h7jd8-MuiGrid-root"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8 printGridWidth_66_inline css-1st314e-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1694iiy-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-1yzd79m-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-hshm0p"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Delivery Summary
                </h5>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Shipped To
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-shipped-to"
                  >
                    -
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Ship Date
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-ship-date"
                  >
                    -
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-5 css-uafqmk-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-5ds2jq-MuiTypography-root"
                  >
                    Delivery Method
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-7 css-8eylb7-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                    data-testid="delivery-summary-delivery-method"
                  >
                    -
                  </p>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-6 css-1yzd79m-MuiGrid-root"
            >
              <div
                class="MuiBox-root css-hshm0p"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
                >
                  Special Pickup or Handling Instructions
                </h5>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                data-testid="handling-instructions"
              >
                N/A
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 printGridBlock css-1tw2i9j-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8.5 printGridWidth_100 css-11jw4ks-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1dd7zhh-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiBox-root css-1y5sho6"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item printGridWidth_15 css-13i4rnv-MuiGrid-root"
                >
                  <div
                    class="printGridWidth_90 MuiBox-root css-1l8jtn9"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Product
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true MuiGrid-grid-md-3 printGridWidth_25 css-1hxednu-MuiGrid-root"
                />
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-md-true printGridWidth_60 printGridBlock css-70o5km-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Price
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Order Quantity
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Ship Quantity
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true printGridWidth_25_inline css-1z0dvx8-MuiGrid-root"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-alignCenter css-dq9d7w-MuiTypography-root"
                    >
                      Order Total
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1z0dvx8-MuiGrid-root"
                  />
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
            <div
              class="MuiBox-root css-gajhq5"
            >
              <div
                class="MuiBox-root css-14uch6e"
              >
                <h4
                  class="MuiTypography-root MuiTypography-h4 css-1jd3u1u-MuiTypography-root"
                >
                  No items were found
                </h4>
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-chh3rr-MuiTypography-root"
                >
                  If this is an error, please 
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-lm34z4-MuiTypography-root-MuiLink-root"
                    to="/support"
                  >
                    Contact Branch
                  </a>
                </h5>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3.5 printGridWidth_50 printBreakPage css-1wcy7d3-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-26ymy3-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiBox-root css-ju4zfe"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-1bvxf5q-MuiTypography-root"
              >
                Order Summary
              </h5>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-3zd3l8-MuiPaper-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container css-cqjonc-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  >
                    Subtotal
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
                    data-testid="order-summary-subtotal"
                  >
                    $0.00
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1gzv4l7-MuiTypography-root"
                  >
                    Tax
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1ufy15n-MuiTypography-root"
                    data-testid="order-summary-tax"
                  >
                    $0.00
                  </p>
                </div>
              </div>
              <div
                class="MuiBox-root css-1ebprri"
              >
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
                />
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1k5xob2-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                  >
                    Order Total
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1hhgieh-MuiGrid-root"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-1eszk6v-MuiTypography-root"
                    data-testid="order-summary-order-total"
                  >
                    $0.00
                  </p>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
                >
                  <button
                    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-1fitk8o-MuiButtonBase-root-MuiButton-root"
                    data-testid="add-all-to-cart-button"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    Add All to Cart
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order - index Should match snapshot when it is Invoiced 1`] = `
<span
  class="MuiBox-root css-1t8i1vx"
  data-testid="order-status"
>
  orders.
</span>
`;

exports[`Order - index Should match snapshot when it is Submitted 1`] = `
<span
  class="MuiBox-root css-1t8i1vx"
  data-testid="order-status"
>
  orders.
</span>
`;

exports[`Order - index Should match snapshot when it is Unknown 1`] = `
<span
  class="MuiBox-root css-1t8i1vx"
  data-testid="order-status"
>
  orders.
</span>
`;
